Code Base/objects/AssembliedBOM__c.object
<CustomObject>
    <fields>
        <fullName>AssembliedBOMID__c</fullName>
        <externalId>true</externalId>
        <label>Assemblied BOM ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOM__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BOM</label>
        <referenceTo>BOM__c</referenceTo>
        <relationshipLabel>Assemblied BOMs</relationshipLabel>
        <relationshipName>Assemblied_BOMs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MeasurementUnit__c</fullName>
        <formula>BOM__r.MeasurementUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Measurement Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartDescription__c</fullName>
        <formula>BOM__r.Part_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubAssemblyPrice__c</fullName>
        <formula>SUBQuantity__c *  BOM__r.UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Assembly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubAssembly__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Assembly</label>
        <referenceTo>SubAssembly__c</referenceTo>
        <relationshipLabel>Assemblied BOMs</relationshipLabel>
        <relationshipName>Assemblied_BOMs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Assemblied BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BOM__c</columns>
        <columns>SubAssembly__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assemblied BOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assemblied BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>